No more bug on new_athlete signal. New design. Not responsive yet

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,19 +29,21 @@
   padding: 8px;
   padding-left:15px;
   color: #505051;
+  font-size: 16px;
 }
 
 .route-info{
-  padding: 10px;
+  padding: 15px;
   padding-left: 20px;
   color: #676767;
   font-size: 15px;
   
 }
 
-comments{
+.comments{
   color: #3b434c;
   font-size: 19px;
+  
 }
 
 body{
@@ -55,4 +57,23 @@ a:active,
 a:hover {
   color: #a81000;
   outline: 0;
+}
+
+.grade{
+  font-size: 26px;
+}
+
+.grey {
+  color: #666;
+}
+
+.grey:active,
+.grey:hover {
+  color: #333;
+  outline: 0;
+}
+
+.remark-container{
+  color: #666;
+  text-align: center;
 }
